--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "react": "^16.12.0",
+    "react-card-flip": "^1.0.10",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
   },
